static/css/thebarn.css
.mainBoard{
  padding: 50px;
}


#dogPictures{
  padding: 50px;
}

#intakeData{
  padding: 50px;
  

}

.dogPicture   {
    border-radius: 50%;
    height: 200px;
    width: 200px;
    padding: 10px;
}

.container {
  margin: 0;
  width: 100%;
}

.textbox {
  height: 200px;
  width: 700px; 
  border: 1px solid;
  border-radius: 25px;
}

.pupdatebox {
  height: 50px;
  width: 150px; 
  border: 1px solid;
  border-radius: 25px;
}

#submitButton {
    background-color: #a0d8f3; 
    border: none;
    color: black;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}

#pupdateButton {
    background-color: #a0d8f3; 
    border: none;
    color: black;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}



/*#dogp1   {
    float: left;
  

}

#dogp2   {
    float: left;
  
}

#dogp4   {
    float: left;
    
}

#dogp5   {
    float: left;
    
}

#dogp7   {
    float: left;
   
}

#dogp8   {
    float: left;
   
}

#dogp10   {
    float: left;
   
}

#dogp11   {
    float: left;
 
}


#dogp13   {
    float: left;

}

#dogp14   {
    float: left;

}
*/

.node {
      fill: #ccc;
      stroke-width: 2px;
    }

.link {
      stroke: #777;
      stroke-width: 3px;
    }
text {
      fill: #000;
      font: 10px sans-serif;
      pointer-events: none;
    }



.miniDogPicture   {
    display: block;
    border-radius: 80px;
    height: 70px;
    width: 70px;
    padding: 10px;
    vertical-align: top;
}



.dogIntakeProfile {
  vertical-align: top;
  top: 0;
  right:0;
}


.dogFriendGraph{
  right: 0;
  vertical-align: top;
  
}

.dogCommandsGraph {
  max-height: 450px;
  max-width: 500px;
  right: 0;

}

.graphCircle{
  fill: #a0d8f3;
}

.graphText{
  font-weight: bold;
  font-family: sans-serif;
  font-size: 14px;
}

